fix sizing of img now that the cropping is closer

--- a/css/style.scss
+++ b/css/style.scss
@@ -70,7 +70,7 @@ header nav img {
     vertical-align: middle;
 }
 .searchbar button img {
-    width: 50px;
+    width: 40px;
 }
 .container {
     text-align: center;
